--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>test</title>
+	<title>Burtke i Krump</title>
 	<script type="text/javascript" src="phaser.js"></script>
 	<script type="text/javascript" src="gra.js"></script>
 
